2005-01-23  Hans de Graaff  <hans@degraaff.org>

	* checkbot: Only send mail when Checkbot has detected any
	problems, based on suggestion from Thomas Kuerten.

2005-01-23  Adam Griff <griff@computer.org>
	
	* checkbot (create_page): Print out more options on results page.
	
2005-01-21  Hans de Graaff  <hans@degraaff.org>

	* checkbot: Remove automatic version number based on CVS version
	now that commits will be more frequent than releases.

2004-11-12  Hans de Graaff  <hans@degraaff.org>

	* checkbot (handle_url): Ignore javascript: URLs instead of
	generating a 904 error. It would be nice to handle these as well.

2004-05-26  Hans de Graaff  <hans@degraaff.org>

	* Makefile.PL: Sync HTML::Parser requirement with required
	versions of libwww-perl.

2004-05-03  Hans de Graaff  <hans@degraaff.org>

	* checkbot: Write better documentation for --file option.

2004-04-26  Hans de Graaff  <hans@degraaff.org>

	* checkbot: Minor documentation changes thank to Jens
	Schweikhardt.

2004-04-22  Hans de Graaff  <hans@degraaff.org>

	* Checkbot 1.75 is released.

2004-04-21  Hans de Graaff  <hans@degraaff.org>

	* checkbot (print_help): Use a here-doc for the help for easier
	maintenance.
	(init_modules): Add --noproxy options to set list of domains which
	will not be passed through the proxy.

2004-04-18  Hans de Graaff  <hans@degraaff.org>

	* checkbot (handle_url): Create an error if an unknown scheme is
	encountered and only ignore known schemes like mailto:

2004-03-30  Hans de Graaff  <hans@degraaff.org>

	* checkbot: Add explanation about error message which indicates
	lack of SSL support.

2004-03-28  Hans de Graaff  <hans@degraaff.org>

	* checkbot: Add EXAMPLES section to the perldoc documentation with
	an example of the most simple invocation. Needs more examples...
	Update help text for --mailto to confirm that more than one
	address is possible.

	* checkbot: Add new --cookies option to accept cookies from
	servers. Based on patch from Roger Pilkey.
